--- a/index.html
+++ b/index.html
@@ -1,185 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Responsive Image Gallery</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #111;
-      color: #fff;
-      padding: 20px;
-    }
-
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 15px;
-    }
-
-    .gallery img {
-      width: 100%;
-      height: auto;
-      border-radius: 12px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      cursor: pointer;
-    }
-
-    .gallery img:hover {
-      transform: scale(1.05);
-      box-shadow: 0 8px 20px rgba(255, 255, 255, 0.3);
-    }
-
-    /* Modal Styles */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 9999;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,0.85);
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
-
-    .modal img {
-      max-width: 90%;
-      max-height: 80vh;
-      border-radius: 10px;
-      transition: transform 0.3s ease;
-    }
-
-    .close {
-      position: absolute;
-      top: 20px;
-      right: 30px;
-      font-size: 35px;
-      cursor: pointer;
-      color: #fff;
-    }
-
-    .arrow {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 50px;
-      color: #fff;
-      cursor: pointer;
-      padding: 10px;
-      z-index: 10000;
-    }
-
-    .arrow.left {
-      left: 10px;
-    }
-
-    .arrow.right {
-      right: 10px;
-    }
-
-    @media(max-width: 768px) {
-      .arrow {
-        font-size: 35px;
-      }
-
-      .close {
-        font-size: 28px;
-      }
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CodeAlpha Calculator</title>
+  
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <h1>📸 Amazing Image Gallery</h1>
-
-  <div class="gallery" id="gallery">
-    <img src= "images/NPTEL CERTIFICATE.jpg" alt="nptel">
-    <img src="images/image.png"  alt="infosys">
-    <img src="images/aws.png" alt="aws">
-    <img src="images/certificate-1-2.png" alt=edx">
-    <img src="images/Codsost.png" alt="Gallery Image 5">
-    <img src="images/NDLI.png" alt="Gallery Image 6">
-    <img src="images/Accenture.png" alt="Gallery Image 6">
-    <img src="images/bharat.png" alt="Gallery Image 6">
-    <img src="images/edx.png" alt="Gallery Image 6">
-    <img src="images/unstop.png" alt="Gallery Image 6">
-    <img src="images/coderscave.png" alt="Gallery Image 6">
-    <img src="images/svce.png" alt="Gallery Image 6">
-    <img src="images/mongodb.png" alt="Gallery Image 6">
-    <img src="images/tcs.png" alt="Gallery Image 6">
-    <img src="images/ai.png" alt="Gallery Image 6">
     
+  <div class="calculator">
+    <input type="text" id="display" disabled />
+    <div class="buttons">
+      <button class="btn" onclick="clearDisplay()">C</button>
+      <button class="btn" onclick="deleteLast()">⌫</button>
+      <button class="btn" onclick="append('%')">%</button>
+      <button class="btn operator" onclick="append('/')">÷</button>
 
-    
+      <button class="btn" onclick="append('7')">7</button>
+      <button class="btn" onclick="append('8')">8</button>
+      <button class="btn" onclick="append('9')">9</button>
+      <button class="btn operator" onclick="append('*')">×</button>
 
+      <button class="btn" onclick="append('4')">4</button>
+      <button class="btn" onclick="append('5')">5</button>
+      <button class="btn" onclick="append('6')">6</button>
+      <button class="btn operator" onclick="append('-')">−</button>
 
+      <button class="btn" onclick="append('1')">1</button>
+      <button class="btn" onclick="append('2')">2</button>
+      <button class="btn" onclick="append('3')">3</button>
+      <button class="btn operator" onclick="append('+')">+</button>
+
+      <button class="btn" onclick="append('0')">0</button>
+      <button class="btn" onclick="append('.')">.</button>
+      <button class="btn equals" onclick="calculate()">=</button>
+    </div>
   </div>
 
-  <!-- Modal -->
-  <div class="modal" id="modal">
-    <span class="close" id="close">&times;</span>
-    <span class="arrow left" id="prev">&#10094;</span>
-    <img id="modal-img" src="" alt="Modal Image">
-    <span class="arrow right" id="next">&#10095;</span>
-  </div>
-
-  <script>
-    const images = document.querySelectorAll(".gallery img");
-    const modal = document.getElementById("modal");
-    const modalImg = document.getElementById("modal-img");
-    const closeBtn = document.getElementById("close");
-    const nextBtn = document.getElementById("next");
-    const prevBtn = document.getElementById("prev");
-
-    let currentIndex = 0;
-
-    function openModal(index) {
-      currentIndex = index;
-      modalImg.src = images[index].src;
-      modal.style.display = "flex";
-    }
-
-    function showNext() {
-      currentIndex = (currentIndex + 1) % images.length;
-      modalImg.src = images[currentIndex].src;
-    }
-
-    function showPrev() {
-      currentIndex = (currentIndex - 1 + images.length) % images.length;
-      modalImg.src = images[currentIndex].src;
-    }
-
-    images.forEach((img, index) => {
-      img.addEventListener("click", () => openModal(index));
-    });
-
-    closeBtn.addEventListener("click", () => modal.style.display = "none");
-    nextBtn.addEventListener("click", showNext);
-    prevBtn.addEventListener("click", showPrev);
-
-    // Keyboard navigation
-    document.addEventListener("keydown", (e) => {
-      if (modal.style.display === "flex") {
-        if (e.key === "ArrowRight") showNext();
-        else if (e.key === "ArrowLeft") showPrev();
-        else if (e.key === "Escape") modal.style.display = "none";
-      }
-    });
-  </script>
-
+  <script src="script.js"></script>
 </body>
-</html>
+</html> 
